# gui-control

./: .gitignore  README.md
background_subtraction/: BackgroundSubtraction  BackgroundSubtraction.cpp  CMakeLists.txt
camera_feed/: CMakeLists.txt  CameraFeed  CameraFeed.cpp
colour_detection/: .gitignore  CMakeLists.txt  ColourDetection  ColourDetection.cpp  saved_gestures.txt
colour_detection/include/: color_detection.hpp  dtw_distance.hpp  fingertip.hpp  fingertip_detection.hpp  fingertip_tracking.hpp  gesture_execution.hpp  init.hpp
colour_detection/src/: color_detection.cpp  dtw_distance.cpp  fingertip.cpp  fingertip_detection.cpp  fingertip_tracking.cpp  gesture_execution.cpp  init.cpp  saved_gestures.txt
development/: CMakeLists.txt  Development  Development.cpp
production/: CMakeLists.txt  Production  Production.cpp
test/: .gitignore  DisplayImage  DisplayImage.cpp
