cmake_minimum_required(VERSION 2.8)
project( ColourDetection )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( ColourDetection ColourDetection.cpp src/gesture_execution.cpp src/fingertip_tracking.cpp src/fingertip.cpp src/color_detection.cpp src/fingertip_detection.cpp src/init.cpp )
target_link_libraries( ColourDetection ${OpenCV_LIBS} )